# parallel-io

./: .gitignore  CMakeLists.txt  CNAME  README.md  annotated.html  classes.html  classpio_1_1io_1_1result-members.html  classpio_1_1io_1_1result.html  dir_1f98e8c72a30add04121880d81695d2e.html  dir_1f98e8c72a30add04121880d81695d2e.js  dir_64da3d6948473290f1f64b1e37c2a68b.html  dir_af0ec12407742d792742f42ec53b36d4.html  dir_af0ec12407742d792742f42ec53b36d4.js  dir_bfd013d325d029f4c9d1d75818be5cd6.html  dir_bfd013d325d029f4c9d1d75818be5cd6.js  distributor_8hh_source.html  ex__file_8hh_source.html  external_8hh_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  io_8hh.html  io_8hh_source.html  main.cpp  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacepio.html  namespacepio.js  namespacepio_1_1exodus.html  namespacepio_1_1exodus.js  namespacepio_1_1io.html  namespacepio_1_1netcdf.html  namespaces.html  (+87 more)
cmake/: pio-config.cmake.in
doc/: doxyfile
doc/pages/: main.dox
docs/: CNAME  Tutorial.html  Tutorial.js  annotated.html  annotated_dup.js  build.html  classes.html  dir_1f98e8c72a30add04121880d81695d2e.html  dir_64da3d6948473290f1f64b1e37c2a68b.html  dir_64da3d6948473290f1f64b1e37c2a68b.js  dir_af0ec12407742d792742f42ec53b36d4.html  dir_bfd013d325d029f4c9d1d75818be5cd6.html  distributor_8hh_source.html  ex__file_8hh_source.html  exodus_2file_8hh_source.html  external_8hh_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  io_8hh.html  io_8hh.js  io_8hh_source.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacepio.html  namespacepio_1_1exodus.html  namespacepio_1_1io.html  namespacepio_1_1io.js  namespacepio_1_1netcdf.html  namespacepio_1_1netcdf.js  namespaces.html  navtreedata.js  navtreeindex0.js  net__file_8hh_source.html  (+86 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_6.js  all_c.js  all_d.js  all_e.js  classes_7.js  classes_a.js  classes_b.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  pages_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_2.js
pio/: CMakeLists.txt  external.hh  io.cpp  io.hh  pio.hh
pio/exodus/: ex_file.cpp  ex_file.hh  file.hh
pio/io/: distributor.cpp  distributor.hh  promise.hh  result.hh  span.hh  type.cpp  type.hh
pio/netcdf/: file.cpp  file.hh  net_file.cpp  net_file.hh
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_c.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_6.js  functions_7.js  functions_a.js  namespaces_0.js  variables_0.js  variables_1.js
